feat: tracex 492 hierarchical filtering on backend (#311)
Co-authored-by: Maximilian Wesener <124587888+ds-mwesener@users.noreply.github.com>

(cherry picked from commit 014728c43a72197082534e9827992a2ae69d89e3)